<resources>
    <string name="app_name">FumigacioneSMoncada</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="nav_titulo">Fumigaciones Moncada</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_admin">Cerrar sesión</string>
    <string name="menu_principal">Principal</string>
    <string name="menu_servicio">Adquirir Servicio</string>
    <string name="menu_acerca">Acerca De</string>
    <string name="tab_text_1">CHAT</string>
    <string name="tab_text_2">REGISTRO</string>
    <string name="tab_text_3">CITAS</string>
    <string name="tab_text_4">CONTENIDO</string>
    <string name="title_activity_registro">Registro Nuevo Usuario</string>
    <string name="detalle_cita">Agregar Cita</string>
    <string name="crear_factura">Crear Factura</string>
    <string name="title_activity_navegacion_admin">Administrador</string>
    <string name="title_activity_navegacion_administrador">NavegacionAdministradorActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_clientes">Registro de clientes</string>
    <string name="menu_imagen">Añadir Servicio</string>
    <string name="menu_citas">Citas</string>
    <string name="menu_solicitarCita">Solicitud de citas</string>
    <string name="menu_acercad">Acerca de</string>
    <string name="perfil">Perfil</string>
    <string name="publicidad">Publicidad</string>
    <string name="contactar">Contactar</string>
    <string name="crearfactura">Crear Factura</string>
    <string name="detalleCita">Información de la cita</string>
    <string name="visionMision"> Visión y Misión de la Empresa</string>
    <string name="desarrolladores">Desarrolladores</string>
    <string name="ip">http://64.225.37.202:8082</string>
    <string name="account_type">com.example.fumigacionesmoncada.account</string>
    <string name="provider_citas_authority">com.example.fumigacionesmoncada.CitasSync.CitasProvider</string>
    <string name="action_usuario">Cerrar sesión</string>
    <string name="title_activity_contactos">Contactos</string>
    <string name="photo">Foto</string>
    <string name="title_activity_detalle_servicio_scroll">DetalleServicioScroll</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_registro_cita">Registro de citas</string>
    <string name="btn_chat">Enviar</string>
    <string name="message">Escribe tu mensaje</string>
    <string name="factura">Factura</string>
    <string name="default_notification_channel_id">Fumigaciones</string>
    <string name="mision_y_visi_n">Misión y visión</string>
    <string name="adquirir_servicios">Servicio</string>
    <string name="title_activity_detalle_servicio_administrador_scrolling">
        DetalleServicioAdministradorScrollingActivity
    </string>
    <string name="title_activity_detalle_cita_scrolling">DetalleCitaScrollingActivity</string>
    <string name="menu_contactar">Contactar</string>
    <string name="titlr_llamar">Llamada Telefónica</string>
    <string name="title_activity_detalle_cliente_scrolling">DetalleClienteScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="loading">Iniciando sesión</string>
    <string name="registrando">Registrando tu cuenta</string>
    <string name="consultandoImagenes">Consultando Imágenes</string>
    <string name="conexionServidor">No se ha podido establecer conexión con el servidor</string>
    <string name="presentamosProblemas">Presentamos problemas intentelo más tarde</string>
    <string name="reviseConexion">Revise su conexión a internet</string>
    <string name="error">Error</string>
    <string name="detalle_servicio">Detalle Servicio</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="insectos">Insectos</string>
    <string name="roedores">Roedores</string>
    <string name="adquirirServicio">Adquirir servicio</string>
    <string name="nombreNoModificar">El Nombre no se puede modificar</string>
    <string name="campoTelefono">El campo del teléfono está vacio</string>
    <string name="campoResidencia">El campo de la dirección está vacio</string>
    <string name="campoFecha">El campo de la fecha está vacio</string>
    <string name="campoHora">El campo de la hora está vacio</string>
    <string name="importante">Importante</string>
    <string name="verificacionDeDatos">¿Estos datos son los correctos?</string>
    <string name="nombreAdquirir">Nombre:</string>
    <string name="direccionAdquirir">Dirección De Fumigación:</string>
    <string name="telefonoAdquirir">Teléfono:</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cargandoAdquirir">Cargando…</string>
    <string name="registroAdquirir">Se ha registrado con éxito</string>
    <string name="horarioDeAtencion">El Horario de atención es de 7:00AM a 8:00PM</string>
    <string name="horaAlerta">La hora seleccionada no es correcta, debe ser mayor a la hora actual</string>
    <string name="ayuda">Ayuda</string>
    <string name="seleccioneelcliente">Seleccione el cliente</string>
    <string name="precio">Precio</string>
    <string name="fechas">Fecha</string>
    <string name="horas">Hora</string>
    <string name="direccions">Dirección</string>
    <string name="agregarcita">Agregar Cita</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="nombrecompleto">Nombre Completo</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmarcontra">Confirmar Contraseña</string>
    <string name="residencias">Residencia</string>
    <string name="telefonos">Teléfono</string>
    <string name="registrar">Registrar</string>
</resources>