<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chat">


    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.fumigacionesmoncada.ui.Mensajes.MensajesFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_mensajes" />

    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.fumigacionesmoncada.ui.clientes.ClientesFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/nav_imagen"
        android:name="com.example.fumigacionesmoncada.ui.imagen.ImagenFragment"
        android:label="@string/menu_imagen"
        tools:layout="@layout/fragment_imagen" />

    <fragment
        android:id="@+id/nav_citas"
        android:name="com.example.fumigacionesmoncada.ui.citas.CitasFragment"
        android:label="@string/menu_citas"
        tools:layout="@layout/fragment_citas" />

    <fragment
        android:id="@+id/nav_solicitarCita"
        android:name="com.example.fumigacionesmoncada.ui.solicitarCita.SolicitarCitaFragment"
        android:label="@string/menu_solicitarCita"
        tools:layout="@layout/fragment_solicitar_cita" />

    <fragment
        android:id="@+id/nav_acercad"
        android:name="com.example.fumigacionesmoncada.ui.Acerca.AcercaFragment"
        android:label="@string/menu_acercad"
        tools:layout="@layout/fragment_acerca" />

    <fragment
        android:id="@+id/nav_serviciosadministrador"
        android:name="com.example.fumigacionesmoncada.Database.serviciosAdministrador.ServiciosAdministradorFragment"
        android:label="@string/publicidad"
        tools:layout="@layout/fragment_servicios_administrador" />
    <fragment
        android:id="@+id/nav_factura"
        android:name="com.example.fumigacionesmoncada.factura.Factura_Fragment"
        android:label="@string/factura"
        tools:layout="@layout/fragment_factura" />


</navigation>