<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_imagen"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_imagen" />

    </group>

    <item android:title="Citas">
        <menu>

            <item
                android:id="@+id/nav_citas"
                android:icon="@drawable/ic_class_black_24dp"
                android:title="@string/menu_citas" />
            <item
                android:id="@+id/nav_solicitarCita"
                android:icon="@drawable/ic_import_contacts_black_24dp"
                android:title="@string/menu_solicitarCita" />
        </menu>
    </item>

    <item android:title="Información">
        <menu>
            <item
                android:id="@+id/nav_acercad"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_acercad" />
        </menu>
    </item>

</menu>
