<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.example.fumigacionesmoncada.ui.Principal.Principal_Fragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />

    <fragment
        android:id="@+id/nav_servicio"
        android:name="com.example.fumigacionesmoncada.ui.AdquirirServicio.Aquirir_Servicio_Fragment"
        android:label="@string/menu_servicio"
        tools:layout="@layout/fragment_ad_servicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.fumigacionesmoncada.Perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_acerca"
        android:name="com.example.fumigacionesmoncada.ui.AcercaDe.Acerca_De_Fragment"
        android:label="@string/menu_acerca"
        tools:layout="@layout/fragment_acerca_de" />
    <fragment
        android:id="@+id/nav_registro_citas"
        android:name="com.example.fumigacionesmoncada.listadoPeticionesCita.Registro_De_Citas"
        android:label="@string/menu_registro_cita"
        tools:layout="@layout/fragment_registro__de__citas" />
    <fragment
        android:id="@+id/nav_contactar"
        android:name="com.example.fumigacionesmoncada.ui.contactar.ContactarFragment"
        android:label="@string/contactar"
        tools:layout="@layout/fragment_contactar_" />
</navigation>