<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_admin"
        android:onClick="red_admin"
        app:showAsAction="never" />

    <item
        android:id="@+id/visionau"
        android:orderInCategory="100"
        android:title="@string/mision_y_visi_n"
        android:onClick="mision_vision_admin"
        app:showAsAction="never" />


    <item
        android:id="@+id/confinau"
        android:orderInCategory="100"
        android:title="@string/desarrolladores"
        android:onClick="desarrolladores_admin"
        app:showAsAction="never" />


    <item android:id="@+id/action_ayuda"
        android:orderInCategory="100"
        android:title="@string/ayuda"
        app:showAsAction="never"
        android:onClick="ayuda_admin">

    </item>

</menu>