<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_principal"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_servicio"
            android:icon="@drawable/ic_servicio"
            android:title="@string/menu_servicio" />
        <item
            android:id="@+id/nav_registro_citas"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_registro_cita" />

    </group>

        <item android:title="Informacion">

       <menu>
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/perfil" />

           <!--<item
               android:id="@+id/nav_contactar"
               android:icon="@drawable/ic_perm_phone_msg_black_24dp"
               android:title="Contactar" />-->
       </menu>

</item>

</menu>
