<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="match_parent"
    android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">


                <ImageButton
                    android:id="@+id/foto"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:background="@drawable/boton_redondo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/perfil" />


            <EditText
                android:id="@+id/registro_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/nombre_cliente"
                android:hint="@string/nombrecompleto"
                android:lines="1"
                android:maxLength="30"
                android:drawablePadding="10dp"


                />

            <EditText
                android:id="@+id/registro_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/residencia_cliente"
                android:hint="@string/residencias"
                android:lines="1"
                android:drawablePadding="10dp"
                android:maxLength="250"

                />

            <EditText
                android:id="@+id/registro_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:drawableLeft="@drawable/telefono_cliente"
                android:hint="@string/telefonos"
                android:inputType="phone"
                android:maxLength="8"
                android:drawablePadding="10dp"
                 />


            <EditText
                android:id="@+id/registro_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/correo_cliente"
                android:hint="example0@gmail.com"
                android:maxLength="76"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:drawablePadding="10dp"
                 />

            <EditText
                android:id="@+id/registro_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cotra_cliente"
                android:hint="@string/contraseña"
                android:maxLength="76"
                android:inputType="textPassword"
                android:lines="1"
                android:drawablePadding="10dp"
                />

            <EditText
                android:id="@+id/comprobacion_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/confi_cliente"
                android:hint="@string/confirmarcontra"
                android:inputType="textPassword"
                android:lines="1"
                android:drawablePadding="10dp"
                 />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <RadioButton
                    android:id="@+id/maculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:text="@string/hombre"

                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mujer"
                    android:textSize="18dp" />
            </RadioGroup>


            <Button
                android:id="@+id/registrar"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:onClick="registrar"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/colorBlanco"
                />

        </LinearLayout>

</ScrollView>




