<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccioneelcliente"
                    android:layout_marginTop="50dp"
                    android:textSize="25dp"
                    android:textColor="#000"/>

                <EditText
                    android:id="@+id/registro_nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/cliente_cita"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:focusable="false"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direccions"
                    android:textSize="25dp"
                    android:textColor="#000"/>

                <EditText
                    android:id="@+id/registro_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/direccion_cita"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio"
                    android:textSize="25dp"
                    android:textColor="#000"/>

                <EditText
                    android:id="@+id/registro_Precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/lempira_icon"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="30"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechas"
                    android:textSize="25dp"
                    android:textColor="#000"/>

                <EditText
                    android:id="@+id/registro_Fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/fecha_cita"
                    android:focusable="false"
                    android:inputType="date"
                    android:lines="1"
                    android:onClick="fechass"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horas"
                    android:textSize="25dp"
                    android:textColor="#000"/>

                <EditText
                    android:id="@+id/registro_Hora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:focusable="false"
                    android:inputType="time"
                    android:drawableLeft="@drawable/hora_cita"
                    android:lines="1"/>


                <Button
                    android:id="@+id/registrar1"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimary"
                    android:onClick="registrar1"
                    android:text="@string/agregarcita"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlanco"

                    />

            </LinearLayout>


</ScrollView>