<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.Principal.DetalleServicioScroll"
    tools:showIn="@layout/activity_detalle_servicio_scroll"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_servicio"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    />
                <TextView
                    android:layout_marginTop="15dp"
                    android:id="@+id/tituloImagenD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="25sp"/>


            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/descripcionImagenD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion"
                        android:textSize="25dp"
                        android:textColor="#000"
                        android:padding="10dp"
                        />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

</androidx.core.widget.NestedScrollView>